2005-07-29  Sam Steingold  <sds@gnu.org>

	* modules/berkeley-db/bdb.c (BDB:DBE-SET-OPTIONS):
	dbe->set_verbose() does not accept bit flag combinations

2005-07-29  Sam Steingold  <sds@gnu.org>

	* makemake.in (gen.lispbibl.c): fixed the sed(1) expression to work on
	solaris, darwin, openbsd, msys (gnu sed 3), cygwin&linux (gnu sed 4)
	Suggested by rouben@pc18.math.umbc.edu (Rouben Rostamian)

2005-07-27  Sam Steingold  <sds@gnu.org>

	* spvw_debug.d (TheCons_): a new debugging prop

2005-07-26  Sam Steingold  <sds@gnu.org>

	* stream.d (SOCKET-STREAM-SHUTDOWN): never call close(2), just
	shutdown(2) in the appropriate direction; accept raw sockets
	(builtin_stream_close): decide on which stream channel to close
	based on the channel value and not on strmflags
	* modules/rawsock/rawsock.c (SHUTDOWN): removed
	* modules/rawsock/sock.lisp (shutdown): removed

2005-07-27  Sam Steingold  <sds@gnu.org>

	* condition.lisp (eval-loaded-form): accept a FILE argument and
	make the :REPORTs more informative
	* init.lisp (eval-loaded-form) [preliminary]: accept and ignore FILE
	(load): pass *LOAD-TRUENAME* to EVAL-LOADED-FORM as FILE

2005-07-25  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (ensure_living_display): avoid
	"Unprintable error message" by always returning when the argument
	is a DISPLAY

2005-07-25  Sam Steingold  <sds@gnu.org>

	* modules/queens/link.sh (INCLUDES): no need for '-I'
	Reported by "Dr. Werner Fink" <werner@suse.de>

2005-07-22  Sam Steingold  <sds@gnu.org>

	* makemake.in (check): ansi-tests and sacla-tests are for
	developers only and are not included in the source distribution,
	so check should not depend on them;
	for developers, it should also depend on benchmarks

2005-07-22  Sam Steingold  <sds@gnu.org>

	Fixed win32 bug: when "foo" is a file, (directory "foo/") returned
	non-NIL and this prevented loading ~/.clisprc
	* pathname.d (check_stat_directory): removed
	(copy_pathname_and_add_subdir): extracted from